--- a/package.json
+++ b/package.json
@@ -47,12 +47,14 @@
     "@nguniversal/express-engine": "^5.0.0-beta.8",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.8",
     "core-js": "^2.4.1",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.12",
     "ng2-emoji": "^0.2.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/node": "^8.0.30",
