--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
     "ng2-emoji": "^0.2.0",
+    "ng2-page-scroll": "^4.0.0-beta.12",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
