--- a/package.json
+++ b/package.json
@@ -51,11 +51,12 @@
     "mongoose": "^5.0.12",
     "ng2-emoji": "^0.2.0",
     "ng2-page-scroll": "^4.0.0-beta.12",
+    "node-sass": "^4.9.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/node": "^8.0.30",
