--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "core-js": "^2.4.1",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
+    "mongoose-sanitizer": "^1.0.0",
     "ng2-emoji": "^0.2.0",
     "ng2-page-scroll": "^4.0.0-beta.12",
     "node-sass": "^4.9.0",
