--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nguniversal/express-engine": "^5.0.0-beta.8",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.8",
     "core-js": "^2.4.1",
+    "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
     "mongoose-sanitizer": "^1.0.0",
