--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ng2-emoji": "^0.2.0",
     "ng2-page-scroll": "^4.0.0-beta.12",
     "node-sass": "^4.9.0",
+    "request-promise-native": "^1.0.5",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
