--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "reflect-metadata": "^0.1.10",
     "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
