--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "Jason Jean <jasonjean1993@gmail.com>",
     "Fabian Wiles <fabian.wiles@gmail.com>"
   ],
+  "babel": {
+    "presets": [
+      "stage-3",
+      "latest"
+    ]
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,7 +32,8 @@
     "generate:prerender": "cd dist && node prerender",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
     "serve:prerender": "cd dist/browser && http-server",
-    "serve:ssr": "node dist/server"
+    "serve:ssr": "node dist/server",
+    "test": "mocha --timeout 10000 --require ts-node/register test/*.ts"
   },
   "pre-commit": [
     "lint"
@@ -52,7 +59,6 @@
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
     "mongoose-sanitizer": "^1.0.0",
-    "ng2-emoji": "^0.2.0",
     "ng2-page-scroll": "^4.0.0-beta.12",
     "node-sass": "^4.9.0",
     "request-promise-native": "^1.0.5",
@@ -64,15 +70,25 @@
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/node": "^8.0.30",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "codelyzer": "^4.0.2",
     "cpy-cli": "^1.0.1",
     "express": "^4.15.2",
     "http-server": "^0.10.0",
+    "mocha": "^5.2.0",
+    "mocha-typescript": "^1.1.16",
+    "nyc": "^12.0.2",
     "pre-commit": "^1.2.2",
+    "protractor": "^5.3.2",
     "reflect-metadata": "^0.1.10",
     "ts-loader": "^2.3.7",
+    "ts-node": "^6.1.0",
     "tslint": "^5.7.0",
     "typescript": "~2.4.2",
+    "typescript-require": "^0.2.10",
     "webpack-node-externals": "^1.7.2"
   }
 }
