--- a/package.json
+++ b/package.json
@@ -15,12 +15,6 @@
     "Jason Jean <jasonjean1993@gmail.com>",
     "Fabian Wiles <fabian.wiles@gmail.com>"
   ],
-  "babel": {
-    "presets": [
-      "stage-3",
-      "latest"
-    ]
-  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -69,23 +63,20 @@
     "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/mocha": "^5.2.2",
     "@types/node": "^8.0.30",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "codelyzer": "^4.0.2",
     "cpy-cli": "^1.0.1",
     "express": "^4.15.2",
-    "http-server": "^0.10.0",
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.16",
     "nyc": "^12.0.2",
     "pre-commit": "^1.2.2",
-    "protractor": "^5.3.2",
     "reflect-metadata": "^0.1.10",
     "ts-loader": "^2.3.7",
-    "ts-node": "^6.1.0",
+    "ts-node": "^6.1.1",
     "tslint": "^5.7.0",
     "typescript": "~2.4.2",
     "typescript-require": "^0.2.10",
