--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "@types/node": "^8.0.30",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "chai-like": "^1.1.1",
+    "chai-shallow-deep-equal": "^1.4.6",
+    "chai-subset": "^1.6.0",
     "chai-things": "^0.2.0",
     "codelyzer": "^4.0.2",
     "cpy-cli": "^1.0.1",
